# diskpack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
demo/: diskpack_comparisons.ipynb
src/circlepacker/: __init__.py  packer.py
src/diskpack/: config.py  packer.py
tests/: tests.py
