[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diskpack"
version = "0.2.0"
authors = [{ name="James Kelly", email="mrkellyjam@gmail.com" }]
description = "A high-performance vectorized circle packer with spatial hashing."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[tool.setuptools.packages.find]
where = ["src"]
